package com.pluralsight.deli.model;

public interface OrderItem {

    String getDescription();
    double getPrice();
}